--- a/package.json
+++ b/package.json
@@ -11,37 +11,48 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.11",
-    "@angular/common": "~8.2.11",
-    "@angular/compiler": "~8.2.11",
-    "@angular/core": "~8.2.11",
-    "@angular/forms": "~8.2.11",
-    "@angular/platform-browser": "~8.2.11",
-    "@angular/platform-browser-dynamic": "~8.2.11",
-    "@angular/router": "~8.2.11",
-    "rxjs": "~6.4.0",
+    "@angular/animations": "^9.1.0",
+    "@angular/cdk": "^9.2.0",
+    "@angular/common": "~9.0.7",
+    "@angular/compiler": "~9.0.7",
+    "@angular/core": "~9.0.7",
+    "@angular/forms": "~9.0.7",
+    "@angular/localize": "^9.1.0",
+    "@angular/material": "^9.2.0",
+    "@angular/platform-browser": "~9.0.7",
+    "@angular/platform-browser-dynamic": "~9.0.7",
+    "@angular/router": "~9.0.7",
+    "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@types/hammerjs": "^2.0.36",
+    "bootstrap": "^4.4.1",
+    "jquery": "^3.4.1",
+    "ng": "0.0.0",
+    "ng-sidebar": "^9.2.0",
+    "popper.js": "^1.16.1",
+    "rxjs": "~6.5.4",
+    "save--": "github:angular/material",
     "tslib": "^1.10.0",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.14",
-    "@angular/cli": "~8.3.14",
-    "@angular/compiler-cli": "~8.2.11",
-    "@angular/language-service": "~8.2.11",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.803.26",
+    "@angular/cli": "^9.1.0",
+    "@angular/compiler-cli": "~9.0.7",
+    "@angular/language-service": "~9.0.7",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.2.2",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
+    "karma-jasmine-html-reporter": "^1.5.3",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "typescript": "^3.8.3"
   }
 }
